feat: add Ko to nativeLanguage translation